--- a/sale.html
+++ b/sale.html
@@ -273,7 +273,7 @@
     <footer>
         <div class="text-center p-3" style="background-color: rgb(192, 212, 255)">
             © 2023 Done by:
-            <a class="text-dark">Кулешова Мария 8-21</a>
+            <a class="text-dark">Кулешова Мария ИСП 8-21</a>
         </div>
     </footer>
 </body>
